Shoes App Using React JS

--- a/03-Components/src/Components/custom.css
+++ b/03-Components/src/Components/custom.css
@@ -9,6 +9,11 @@
     padding: 0;
     box-sizing:border-box ;
 }
+.navbar{
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+}
 
 #nav-text{
     font-family: "Poppins", sans-serif;
