--- a/03-Components/src/Components/custom.css
+++ b/03-Components/src/Components/custom.css
@@ -14,6 +14,10 @@
     top: 0px;
     z-index: 1;
 }
+#Shoes-material{
+    scroll-behavior: smooth;
+
+}
 
 #nav-text{
     font-family: "Poppins", sans-serif;
